Convert to template system with Vite

--- a/blocks.html
+++ b/blocks.html
@@ -1,113 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" x-data="blocksApp()" x-init="init()" :class="{ 'dark': darkMode }">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noundry UI Blocks - Copy & Paste Ready Components</title>
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
-    <script>
-        tailwind.config = {
-            darkMode: 'class',
-            theme: {
-                extend: {
-                    colors: {
-                        primary: { 50: '#eff6ff', 500: '#3b82f6', 600: '#2563eb', 700: '#1d4ed8' },
-                        accent: { 500: '#10b981', 600: '#059669' }
-                    }
-                }
-            }
-        }
-
-        function copyCode(blockId) {
-            const codeElement = document.getElementById(blockId);
-            const code = codeElement.textContent;
-            navigator.clipboard.writeText(code).then(() => {
-                const btn = event.target;
-                const originalText = btn.textContent;
-                btn.textContent = 'Copied!';
-                btn.classList.add('bg-green-600');
-                setTimeout(() => {
-                    btn.textContent = originalText;
-                    btn.classList.remove('bg-green-600');
-                }, 2000);
-            });
-        }
-
-        function blocksApp() {
-            return {
-                darkMode: false,
-                category: 'all',
-                searchQuery: '',
-                blocks: [],
-
-                init() {
-                    this.darkMode = localStorage.getItem('darkMode') === 'true';
-                    this.$watch('darkMode', val => localStorage.setItem('darkMode', val));
-                    this.initBlocks();
-                },
-
-                initBlocks() {
-                    this.blocks = [
-                        { id: 'login-form', category: 'forms', title: 'Login Form', description: 'Complete login with validation' },
-                        { id: 'contact-form', category: 'forms', title: 'Contact Form', description: 'Multi-field contact form' },
-                        { id: 'registration-form', category: 'forms', title: 'Registration Form', description: 'Sign up with password confirmation' },
-                        { id: 'search-form', category: 'forms', title: 'Search Bar', description: 'Search with filters' },
-
-                        { id: 'hero-section', category: 'marketing', title: 'Hero Section', description: 'Landing page hero with CTA' },
-                        { id: 'hero-split', category: 'marketing', title: 'Split Hero', description: 'Hero with image split' },
-                        { id: 'pricing-cards', category: 'marketing', title: 'Pricing Cards', description: 'Pricing tier cards' },
-                        { id: 'testimonials', category: 'marketing', title: 'Testimonials', description: 'Customer testimonial cards' },
-                        { id: 'cta-section', category: 'marketing', title: 'CTA Section', description: 'Call-to-action banner' },
-                        { id: 'stats-section', category: 'marketing', title: 'Stats Section', description: 'Company statistics display' },
-
-                        { id: 'feature-grid', category: 'content', title: 'Feature Grid', description: 'Product features showcase' },
-                        { id: 'blog-grid', category: 'content', title: 'Blog Grid', description: 'Blog post cards' },
-                        { id: 'team-section', category: 'content', title: 'Team Section', description: 'Team member cards' },
-                        { id: 'timeline', category: 'content', title: 'Timeline', description: 'Vertical timeline component' },
-                        { id: 'faq-accordion', category: 'content', title: 'FAQ Accordion', description: 'Collapsible FAQ list' },
-
-                        { id: 'navbar', category: 'navigation', title: 'Navigation Bar', description: 'Responsive navigation' },
-                        { id: 'sidebar', category: 'navigation', title: 'Sidebar Menu', description: 'Vertical navigation sidebar' },
-                        { id: 'breadcrumbs', category: 'navigation', title: 'Breadcrumbs', description: 'Navigation breadcrumbs' },
-                        { id: 'pagination', category: 'navigation', title: 'Pagination', description: 'Page navigation' },
-                        { id: 'tabs', category: 'navigation', title: 'Tabs', description: 'Tabbed content switcher' },
-
-                        { id: 'data-table', category: 'tables', title: 'Data Table', description: 'Sortable data table' },
-                        { id: 'crud-table', category: 'tables', title: 'CRUD Table', description: 'Table with actions' },
-
-                        { id: 'modal', category: 'overlays', title: 'Modal Dialog', description: 'Popup modal window' },
-                        { id: 'alert-notification', category: 'overlays', title: 'Alert Notification', description: 'Success/Error alerts' },
-                        { id: 'toast', category: 'overlays', title: 'Toast Notification', description: 'Temporary notification' },
-
-                        { id: 'card-basic', category: 'cards', title: 'Basic Card', description: 'Simple content card' },
-                        { id: 'card-profile', category: 'cards', title: 'Profile Card', description: 'User profile card' },
-                        { id: 'card-product', category: 'cards', title: 'Product Card', description: 'E-commerce product card' }
-                    ];
-                },
-
-                get filteredBlocks() {
-                    return this.blocks.filter(block => {
-                        const matchesCategory = this.category === 'all' || block.category === this.category;
-                        const matchesSearch = !this.searchQuery ||
-                            block.title.toLowerCase().includes(this.searchQuery.toLowerCase()) ||
-                            block.description.toLowerCase().includes(this.searchQuery.toLowerCase());
-                        return matchesCategory && matchesSearch;
-                    });
-                }
-            }
-        }
-    </script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
-    <style>
-        body { font-family: 'Inter', sans-serif; }
-        .font-mono { font-family: 'IBM Plex Mono', monospace; }
-        pre, pre *, code, code * {
-            font-family: 'IBM Plex Mono', monospace !important;
-            color: rgb(255 255 255) !important;
-        }
-    </style>
+    <%= head %>
 </head>
 <body class="bg-white dark:bg-gray-900">
     <nav class="fixed top-0 w-full bg-white/80 dark:bg-gray-900/80 backdrop-blur-md border-b border-gray-200 dark:border-gray-700 z-50">
@@ -1393,53 +1288,6 @@
             </div>
         </div>
     </section>
-
-    <!-- Footer -->
-    <footer class="bg-gray-900 dark:bg-black text-white py-16">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="grid lg:grid-cols-5 gap-8">
-                <div class="lg:col-span-2">
-                    <div class="flex items-center mb-6">
-                        <img x-show="darkMode" src="assets/nd-logo-sm.png" alt="Noundry" class="h-8 w-auto">
-                        <img x-show="!darkMode" src="assets/wh-nd-logo-sm.png" alt="Noundry" class="h-8 w-auto">
-                    </div>
-                    <p class="text-gray-300 mb-6 max-w-md">
-                        Copy-paste ready UI blocks built with Noundry.UI TagHelpers. Build faster with production-ready components.
-                    </p>
-                </div>
-
-                <div>
-                    <h3 class="text-lg font-semibold mb-6">Frameworks</h3>
-                    <ul class="space-y-3">
-                        <li><a href="index.html" class="text-gray-300 hover:text-white transition-colors">Noundry.cs (C#/.NET)</a></li>
-                        <li><a href="https://noundry.org" target="_blank" class="text-gray-300 hover:text-white transition-colors">Noundry.ts (TypeScript)</a></li>
-                    </ul>
-                </div>
-
-                <div>
-                    <h3 class="text-lg font-semibold mb-6">Resources</h3>
-                    <ul class="space-y-3">
-                        <li><a href="blocks.html" class="text-gray-300 hover:text-white transition-colors">UI Blocks</a></li>
-                        <li><a href="blueprints.html" class="text-gray-300 hover:text-white transition-colors">Blueprints</a></li>
-                        <li><a href="docs.html" class="text-gray-300 hover:text-white transition-colors">Documentation</a></li>
-                    </ul>
-                </div>
-
-                <div>
-                    <h3 class="text-lg font-semibold mb-6">Support</h3>
-                    <ul class="space-y-3">
-                        <li><a href="https://github.com/noundry" class="text-gray-300 hover:text-white transition-colors">GitHub</a></li>
-                        <li><a href="https://x.com/@noundryfx" class="text-gray-300 hover:text-white transition-colors">Twitter/X</a></li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="border-t border-gray-800 mt-12 pt-8 text-center">
-                <p class="text-gray-400 text-sm">
-                    © 2025 Noundry. All rights reserved.
-                </p>
-            </div>
-        </div>
-    </footer>
+    <%= footer %>
 </body>
 </html>
