--- a/blueprints.html
+++ b/blueprints.html
@@ -1,108 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" x-data="blueprintsApp()" x-init="init()" :class="{ 'dark': darkMode }">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noundry Blueprints - Code Examples & Patterns</title>
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
-    <script>
-        tailwind.config = {
-            darkMode: 'class',
-            theme: {
-                extend: {
-                    colors: {
-                        primary: { 50: '#eff6ff', 500: '#3b82f6', 600: '#2563eb', 700: '#1d4ed8' },
-                        accent: { 500: '#10b981', 600: '#059669' }
-                    }
-                }
-            }
-        }
-        function copyCode(blockId) {
-            const codeElement = document.getElementById(blockId);
-            const code = codeElement.textContent;
-            navigator.clipboard.writeText(code).then(() => {
-                const btn = event.target;
-                const originalText = btn.textContent;
-                btn.textContent = 'Copied!';
-                btn.classList.add('bg-green-600');
-                setTimeout(() => {
-                    btn.textContent = originalText;
-                    btn.classList.remove('bg-green-600');
-                }, 2000);
-            });
-        }
-
-        function blueprintsApp() {
-            return {
-                darkMode: false,
-                framework: 'all', // 'all', 'cs', 'ts'
-                category: 'all',
-                searchQuery: '',
-                blueprints: [],
-
-                init() {
-                    this.darkMode = localStorage.getItem('darkMode') === 'true';
-                    this.$watch('darkMode', val => localStorage.setItem('darkMode', val));
-                    this.initBlueprints();
-                },
-
-                initBlueprints() {
-                    this.blueprints = [
-                        // Noundry.cs Blueprints
-                        { id: 'guardian-auth', framework: 'cs', category: 'security', title: '🛡️ Guardian - Authorization Policies', description: 'Attribute-based authorization with policies and claims', tags: ['auth', 'security', 'policies'] },
-                        { id: 'guardian-guards', framework: 'cs', category: 'validation', title: '🛡️ Guardian - Guard Clauses', description: 'Parameter validation with guard clauses', tags: ['validation', 'guards'] },
-                        { id: 'assertive-tests', framework: 'cs', category: 'testing', title: '⚠️ Assertive - Fluent Assertions', description: 'Fluent assertion library for tests', tags: ['testing', 'assertions'] },
-                        { id: 'sod-validation', framework: 'cs', category: 'validation', title: '✅ Sod - Schema Validation', description: 'Zod-inspired validation for .NET', tags: ['validation', 'schema'] },
-                        { id: 'dotenvx-config', framework: 'cs', category: 'config', title: '🔐 DotEnvX - Encrypted Config', description: 'Encrypted environment variables', tags: ['config', 'security'] },
-                        { id: 'dotenvx-cli', framework: 'cs', category: 'config', title: '🔐 DotEnvX - CLI Tool', description: 'dotenvx CLI for managing secrets', tags: ['config', 'cli'] },
-                        { id: 'connector-api', framework: 'cs', category: 'data', title: '🔌 Connector - API Client', description: 'Strongly-typed API clients with Refit', tags: ['api', 'refit', 'http'] },
-                        { id: 'connector-crud', framework: 'cs', category: 'data', title: '🔌 Connector - CRUD Operations', description: 'Complete CRUD with type-safety', tags: ['crud', 'api'] },
-                        { id: 'connector-oauth', framework: 'cs', category: 'security', title: '🔌 Connector - OAuth 2.0', description: 'OAuth authentication with GitHub', tags: ['oauth', 'auth'] },
-                        { id: 'tuxedo-queries', framework: 'cs', category: 'data', title: '🎩 Tuxedo - Query Builder', description: 'Fluent LINQ-style query builder', tags: ['orm', 'queries', 'database'] },
-                        { id: 'tuxedo-joins', framework: 'cs', category: 'data', title: '🎩 Tuxedo - Complex Joins', description: 'Type-safe joins and aggregations', tags: ['orm', 'joins'] },
-                        { id: 'slurp-csv', framework: 'cs', category: 'data', title: '📥 Slurp - CSV Ingestion', description: 'High-performance CSV to database', tags: ['csv', 'import', 'database'] },
-                        { id: 'andy-cli', framework: 'cs', category: 'tools', title: '🤖 Andy AI - Code Generation', description: 'AI-powered code generation CLI', tags: ['ai', 'cli', 'codegen'] },
-
-                        // Noundry.ts Blueprints
-                        { id: 'ndts-init', framework: 'ts', category: 'setup', title: '🚀 ndts - Project Setup', description: 'Initialize full-stack TypeScript project', tags: ['cli', 'setup', 'bun'] },
-                        { id: 'ndts-dapi', framework: 'ts', category: 'api', title: '🎯 DAPI - Direct API Pattern', description: 'Direct database access with Drizzle ORM', tags: ['api', 'dapi', 'database'] },
-                        { id: 'ndts-bff', framework: 'ts', category: 'api', title: '🔌 BFF - Backend Wrapper', description: 'Wrap existing backend APIs', tags: ['api', 'bff', 'proxy'] },
-                        { id: 'ndts-auth', framework: 'ts', category: 'security', title: '🔐 Auth - JWT Authentication', description: 'JWT auth with token forwarding', tags: ['auth', 'jwt', 'security'] },
-                        { id: 'ndts-crud', framework: 'ts', category: 'data', title: '📝 CRUD - Hono Endpoints', description: 'RESTful CRUD with Hono', tags: ['crud', 'rest', 'hono'] },
-                        { id: 'ndts-drizzle', framework: 'ts', category: 'data', title: '🗃️ Drizzle - Type-safe Queries', description: 'Database queries with Drizzle ORM', tags: ['orm', 'drizzle', 'typescript'] },
-                        { id: 'ndts-client', framework: 'ts', category: 'frontend', title: '🎨 Client - Pure HTML + TS', description: 'Frontend without React (web standards)', tags: ['frontend', 'no-react', 'html'] },
-                        { id: 'ndts-services', framework: 'ts', category: 'api', title: '🛠️ Services - API Proxy Layer', description: 'Service layer for BFF pattern', tags: ['services', 'bff', 'proxy'] }
-                    ];
-                },
-
-                get filteredBlueprints() {
-                    return this.blueprints.filter(bp => {
-                        const matchesFramework = this.framework === 'all' || bp.framework === this.framework;
-                        const matchesCategory = this.category === 'all' || bp.category === this.category;
-                        const matchesSearch = !this.searchQuery ||
-                            bp.title.toLowerCase().includes(this.searchQuery.toLowerCase()) ||
-                            bp.description.toLowerCase().includes(this.searchQuery.toLowerCase()) ||
-                            bp.tags.some(tag => tag.toLowerCase().includes(this.searchQuery.toLowerCase()));
-
-                        return matchesFramework && matchesCategory && matchesSearch;
-                    });
-                }
-            }
-        }
-    </script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
-    <style>
-        body { font-family: 'Inter', sans-serif; }
-        .font-mono { font-family: 'IBM Plex Mono', monospace; }
-        pre, pre *, code, code * {
-            font-family: 'IBM Plex Mono', monospace !important;
-        }
-        pre, pre code, pre code * {
-            color: rgb(255 255 255) !important;
-        }
-    </style>
+    <%= head %>
 </head>
 <body class="bg-white dark:bg-gray-900">
     <nav class="fixed top-0 w-full bg-white/80 dark:bg-gray-900/80 backdrop-blur-md border-b border-gray-200 dark:border-gray-700 z-50">
@@ -1509,53 +1409,6 @@ loadProducts();</code></pre>
             </div>
         </div>
     </section>
-
-    <!-- Footer -->
-    <footer class="bg-gray-900 dark:bg-black text-white py-16">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="grid lg:grid-cols-5 gap-8">
-                <div class="lg:col-span-2">
-                    <div class="flex items-center mb-6">
-                        <img x-show="darkMode" src="assets/nd-logo-sm.png" alt="Noundry" class="h-8 w-auto">
-                        <img x-show="!darkMode" src="assets/wh-nd-logo-sm.png" alt="Noundry" class="h-8 w-auto">
-                    </div>
-                    <p class="text-gray-300 mb-6 max-w-md">
-                        Production-ready code patterns and blueprints for modern application development. Build faster with Noundry.
-                    </p>
-                </div>
-
-                <div>
-                    <h3 class="text-lg font-semibold mb-6">Frameworks</h3>
-                    <ul class="space-y-3">
-                        <li><a href="index.html" class="text-gray-300 hover:text-white transition-colors">Noundry.cs (C#/.NET)</a></li>
-                        <li><a href="https://noundry.org" target="_blank" class="text-gray-300 hover:text-white transition-colors">Noundry.ts (TypeScript)</a></li>
-                    </ul>
-                </div>
-
-                <div>
-                    <h3 class="text-lg font-semibold mb-6">Resources</h3>
-                    <ul class="space-y-3">
-                        <li><a href="blueprints.html" class="text-gray-300 hover:text-white transition-colors">Blueprints</a></li>
-                        <li><a href="docs.html" class="text-gray-300 hover:text-white transition-colors">Documentation</a></li>
-                        <li><a href="https://noundry.com/pricing" class="text-gray-300 hover:text-white transition-colors">Pricing</a></li>
-                    </ul>
-                </div>
-
-                <div>
-                    <h3 class="text-lg font-semibold mb-6">Support</h3>
-                    <ul class="space-y-3">
-                        <li><a href="https://github.com/noundry" class="text-gray-300 hover:text-white transition-colors">GitHub</a></li>
-                        <li><a href="https://x.com/@noundryfx" class="text-gray-300 hover:text-white transition-colors">Twitter/X</a></li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="border-t border-gray-800 mt-12 pt-8 text-center">
-                <p class="text-gray-400 text-sm">
-                    © 2025 Noundry. All rights reserved.
-                </p>
-            </div>
-        </div>
-    </footer>
+    <%= footer %>
 </body>
 </html>
