--- a/cookies.html
+++ b/cookies.html
@@ -1,44 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" x-data="{ darkMode: false }" x-init="$watch('darkMode', val => localStorage.setItem('darkMode', val))" :class="{ 'dark': darkMode }">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cookie Policy - Noundry</title>
-    <link rel="icon" type="image/svg+xml" href="assets/favicon.svg">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
-    <script>tailwind.config = { darkMode: 'class' }</script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-    <style>
-        body { font-family: 'Inter', sans-serif; }
-
-        /* Code blocks always have dark backgrounds - ensure all text is visible */
-        pre .text-gray-200,
-        pre .text-gray-300,
-        pre .text-gray-400,
-        pre .text-gray-500,
-        pre .text-gray-600,
-        pre .text-gray-700,
-        code .text-gray-200,
-        code .text-gray-300,
-        code .text-gray-400,
-        code .text-gray-500,
-        code .text-gray-600,
-        code .text-gray-700 {
-            color: rgb(255 255 255) !important; /* white */
-        }
-
-        /* Ensure ALL text in code blocks is white by default */
-        pre, pre code, pre code * {
-            color: rgb(255 255 255) !important; /* white */
-        }
-
-        /* Ensure operators and symbols are visible */
-        pre span,
-        code span {
-            opacity: 1 !important;
-        }
-    </style>
+    <%= head %>
 </head>
 <body class="bg-white dark:bg-gray-900 text-gray-900 dark:text-white">
     <nav class="fixed top-0 w-full bg-white/80 dark:bg-gray-900/80 backdrop-blur-md border-b border-gray-200 dark:border-gray-700 z-50">
@@ -146,87 +110,7 @@
                 </section>
             </div>
         </div>
-    </div>    <!-- Footer -->
-    <footer class="bg-gray-900 dark:bg-black text-white py-16">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="grid lg:grid-cols-5 gap-8">
-                <div class="lg:col-span-2">
-                    <div class="flex items-center mb-6">
-                        <!-- <span class="text-3xl font-bold text-primary-400">Noundry</span> -->
-                        <img x-show="darkMode" src="assets/nd-logo-sm.png" alt="Noundry" class="h-8 w-auto">
-                            <img x-show="!darkMode" src="assets/wh-nd-logo-sm.png" alt="Noundry" class="h-8 w-auto">
-                    </div>
-                    <p class="text-gray-300 mb-6 max-w-md">
-                        The modern C# development platform that accelerates your journey from idea to production with intelligent tools, reusable components, and AI-powered assistance.
-                    </p>
-                    <div class="flex space-x-4">
-                        <a href="https://x.com/@noundryfx" class="text-gray-400 hover:text-white transition-colors">
-                            <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-                                <path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"/>
-                            </svg>
-                        </a>
-
-                        <a href="http://youtube.com/noundry" class="text-gray-400 hover:text-white transition-colors">
-                            <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-                                <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
-                            </svg>
-                        </a>
-                    </div>
-                </div>
-
-                <div>
-                    <h3 class="text-lg font-semibold mb-6">Frameworks</h3>
-                    <ul class="space-y-3">
-                        <li><a href="index.html" class="text-gray-300 hover:text-white transition-colors">Noundry.com (C#/.NET)</a></li>
-                        <li><a href="https://noundry.org" target="_blank" class="text-gray-300 hover:text-white transition-colors">Noundry.org (TypeScript)</a></li>
-                    </ul>
-                </div>
-
-                <div>
-                    <h3 class="text-lg font-semibold mb-6">Platform</h3>
-                    <ul class="space-y-3">
-                        <li><a href="blocks.html" class="text-gray-300 hover:text-white transition-colors">Blocks</a></li>
-                        <li><a href="blueprints.html" class="text-gray-300 hover:text-white transition-colors">Blueprints</a></li>
-                        <li><a href="andy-ai.html" class="text-gray-300 hover:text-white transition-colors">Andy AI</a></li>
-                        <li><a href="docs.html" class="text-gray-300 hover:text-white transition-colors">Documentation</a></li>
-                        <li><a href="getting-started.html" class="text-gray-300 hover:text-white transition-colors">Examples</a></li>
-                    </ul>
-                </div>
-
-                <div>
-                    <h3 class="text-lg font-semibold mb-6">Support</h3>
-                    <ul class="space-y-3">
-                        <li><a href="help.html" class="text-gray-300 hover:text-white transition-colors">Help Center</a></li>
-                        <li><a href="community.html" class="text-gray-300 hover:text-white transition-colors">Community</a></li>
-                        <li><a href="contact.html" class="text-gray-300 hover:text-white transition-colors">Contact Us</a></li>
-                        <li><a href="status.html" class="text-gray-300 hover:text-white transition-colors">Status</a></li>
-                        <li><a href="changelog.html" class="text-gray-300 hover:text-white transition-colors">Changelog</a></li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="border-t border-gray-800 mt-12 pt-8 flex flex-col md:flex-row justify-between items-center">
-                <p class="text-gray-400 text-sm">
-                    © 2025 Noundry. All rights reserved.
-                </p>
-                <div class="flex items-center space-x-6 mt-4 md:mt-0">
-                    <a href="privacy.html" class="text-gray-400 hover:text-white text-sm transition-colors">Privacy Policy</a>
-                    <a href="terms.html" class="text-gray-400 hover:text-white text-sm transition-colors">Terms of Service</a>
-                    <a href="cookies.html" class="text-gray-400 hover:text-white text-sm transition-colors">Cookie Policy</a>
-                    <span class="text-gray-600">|</span>
-                    <a href="https://packages.noundry.com" target="_blank" class="text-gray-400 hover:text-white transition-colors" title="NuGet Packages">
-                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 32 32">
-                            <path d="M2.5,24.5h27v-17h-27Zm24-14v11h-21v-11Zm-18,8v-5h3v5Zm6,0v-5h3v5Zm6,0v-5h3v5Z"/>
-                        </svg>
-                    </a>
-                    <a href="https://github.com/noundry" target="_blank" class="text-gray-400 hover:text-white transition-colors" title="GitHub">
-                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
-                            <path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd"></path>
-                        </svg>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </footer>
+    </div>
+    <%= footer %>
 </body>
 </html>
